--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=SocialMedia
+services.s3.endpoint=http://localhost:9001
+services.s3.access-key=your-access-key
+services.s3.secret-key=your-secret-key
+services.s3.bucket-name=your-bucket-name
+services.s3.region=us-east-1
